# 2026-bmt210-project

./: .gitignore  CMakeLists.txt  README.md
include/: app.h  canvas.h  draw.h  layer.h  layer_palette.h  stack.h  tool.h
src/: app.c  app.h  canvas.c  draw.c  hashmap.c  hashmap.h  input.c  input.h  layer.c  layer.h  layer_palette.c  main.c  paint  pch.h  stack.c  stroke.c  stroke.h  style_dark.h
